<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.polka.pdm.MainActivity">
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/ViewProfile"
            android:checked="true"
            android:title="@string/viewProfile"/>

        <item
            android:id="@+id/SearchMovies"
            android:title="@string/searchMovies"/>

        <item
            android:id="@+id/Movies"
            android:title="@string/movies"/>

        <item
            android:id="@+id/DVDs"
            android:title="@string/dvd"/>

        <item
            android:id="@+id/Recommendations"
            android:title="@string/recommendation"/>

        <item
            android:id="@+id/LogOut"
            android:title="@string/logout"/>
    </group>
</menu>
