<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.polka.pdm.RegistrationPage"
    tools:showIn="@layout/activity_registration_page">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/registrationTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#121111"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextFirstName"
        android:layout_below="@+id/registrationTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentStart="true"
        android:hint="@string/firstName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextLastName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/lastName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextUserName"
        android:layout_below="@+id/editTextLastName"
        android:layout_alignStart="@+id/editTextFirstName"
        android:hint="@string/Username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/editTextUserName"
        android:layout_alignStart="@+id/editTextUserName"
        android:hint="@string/email" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/signUpButton"
        android:layout_marginTop="49dp"
        android:background="#F7BE39"
        android:textSize="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:onClick="onRegisterButtonPress"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancelRegistrationButton"
        android:background="#F7BE39"
        android:textSize="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/signUpButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:onClick="onCancelButtonPress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextEmail"
        android:hint="@string/password" />

</RelativeLayout>
