<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:fitsSystemWindows="true"-->
    <!--android:background="@drawable/appbackgroundlogo"-->
    <!--tools:context="com.polka.pdm.HomeApp">-->


    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="#F7BE39"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <!--<include layout="@layout/content_home_app" />-->

    <!--&lt;!&ndash;<android.support.design.widget.FloatingActionButton&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/fab"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_gravity="bottom|end"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_margin="@dimen/fab_margin"&ndash;&gt;-->
        <!--&lt;!&ndash;android:src="@android:drawable/ic_dialog_email" />&ndash;&gt;-->

<!--</android.support.design.widget.CoordinatorLayout>-->

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/appbackgroundlogo"
    tools:context="com.polka.pdm.HomeApp">

    <!--<android.support.design.widget.AppBarLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:theme="@style/AppTheme.AppBarOverlay">-->

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?attr/actionBarSize"-->
    <!--android:background="#F7BE39"-->
    <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- The ActionBar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />




        <RelativeLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logoutButton"
                android:id="@+id/LogoutHomeButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="#F7BE39"
                android:onClick="logoutClickListener" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewProfileButton"
                android:id="@+id/ViewProfileButton"
                android:layout_marginTop="45dp"
                android:layout_below="@+id/LogoutHomeButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="#F7BE39"
                android:onClick="onViewProfileClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchMovieButton"
                android:id="@+id/SearchMoviesButton"
                android:layout_below="@+id/ViewProfileButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="#F7BE39"

                android:clickable="true"
                android:onClick="onSearchButtonPress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:id="@+id/MoviesButton"
                android:layout_below="@+id/SearchMoviesButton"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="#F7BE39"
                android:onClick="onMoviesButtonClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_recent_dvds"
                android:id="@+id/DVDsButton"
                android:layout_below="@+id/MoviesButton"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:onClick="onDVDsButtonClick"
                android:background="#F7BE39" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reccomendationButton"
                android:id="@+id/RecommendationsButton"
                android:layout_below="@+id/DVDsButton"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="#F7BE39"
                android:onClick="onRecommendationButtonClick" />

            <!--<include layout="@layout/content_home_app" />-->
        </RelativeLayout>

    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"

        app:menu="@menu/menu_main"/>

</android.support.v4.widget.DrawerLayout>

